k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kadali
  labels:
    name: kadali
    environment: production
